Chnaged from WEB UI to Service UI

--- a/linking_java/OntoSimilarity/src/main/webapp/index.html
+++ b/linking_java/OntoSimilarity/src/main/webapp/index.html
@@ -1,22 +1,1 @@
-<html>
-<head>
-    <title>File Upload</title>
-</head>
-
-<body>
-    <h1>File Upload Form</h1>
-    <hr/>
-
-    <fieldset>
-        <legend>Upload File</legend>
-        <form action="OntoSimServlet" method="post" enctype="multipart/form-data">
-            <label for="source_file">Source File: </label>
-            <input id="source_file" type="file" name="source" size="50"/><br/>
-            <label for="target_file">Target File: </label>
-            <input id="target_file" type="file" name="target" size="50"/><br/>
-            <br/>
-            <input type="submit" value="Submit"/>
-        </form>
-    </fieldset>
-</body>
-</html>
+<html></html>
